Avancement de Modele + correction erreurs de compil jusqu'à CmdSupprimer

--- a/tpHeritage/.cproject
+++ b/tpHeritage/.cproject
@@ -43,18 +43,18 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
-					<folderInfo id="cdt.managedbuild.config.gnu.exe.debug.1509085560.1675902762" name="/" resourcePath="Commande">
-						<toolChain id="cdt.managedbuild.toolchain.gnu.exe.debug.413365594" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.debug" unusedChildren="">
-							<tool id="cdt.managedbuild.tool.gnu.archiver.base.416481830" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1682789110"/>
-							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.887742799" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.139689033"/>
-							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.332452112" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1439823736"/>
-							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.1237234235" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug.894799932"/>
-							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.571585001" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.991957268"/>
-							<tool id="cdt.managedbuild.tool.gnu.assembler.exe.debug.1817867600" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.debug.260462995"/>
+					<folderInfo id="cdt.managedbuild.config.gnu.exe.debug.1509085560.287489541" name="/" resourcePath="Commande">
+						<toolChain id="cdt.managedbuild.toolchain.gnu.exe.debug.480467837" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.debug" unusedChildren="">
+							<tool id="cdt.managedbuild.tool.gnu.archiver.base.1495592342" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1682789110"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.241920470" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.139689033"/>
+							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.313516724" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1439823736"/>
+							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.827557933" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug.894799932"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.680525059" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.991957268"/>
+							<tool id="cdt.managedbuild.tool.gnu.assembler.exe.debug.351085914" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.debug.260462995"/>
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="Commande|Vue|Controleur|Modele" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="Vue|Controleur|Modele" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Controleur"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Modele"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Vue"/>
@@ -104,14 +104,14 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
-					<folderInfo id="cdt.managedbuild.config.gnu.exe.release.1258465624.1333635247" name="/" resourcePath="Commande">
-						<toolChain id="cdt.managedbuild.toolchain.gnu.exe.release.1375256555" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.release" unusedChildren="">
-							<tool id="cdt.managedbuild.tool.gnu.archiver.base.237000759" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1576272482"/>
-							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1074594703" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1443515046"/>
-							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.release.500321173" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.release.1355175253"/>
-							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.release.761266246" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.release.1982681169"/>
-							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.1127098476" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.290864343"/>
-							<tool id="cdt.managedbuild.tool.gnu.assembler.exe.release.983804675" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.release.1369046253"/>
+					<folderInfo id="cdt.managedbuild.config.gnu.exe.release.1258465624.193295694" name="/" resourcePath="Commande">
+						<toolChain id="cdt.managedbuild.toolchain.gnu.exe.release.815739449" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.release" unusedChildren="">
+							<tool id="cdt.managedbuild.tool.gnu.archiver.base.1952835939" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1576272482"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1852370520" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1443515046"/>
+							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.release.1309696276" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.release.1355175253"/>
+							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.release.444697220" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.release.1982681169"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.1251918798" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.290864343"/>
+							<tool id="cdt.managedbuild.tool.gnu.assembler.exe.release.1507875785" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.release.1369046253"/>
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
